--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>КОРОТКО ОБО МНЕ</h2>
-          <p>Привет! Меня зовут Кирилл. Я — QA engineer, с опытом работы в области функционального и нефункционального тестирования ПО. В мои задачи входило тестирование десктопных приложений и веб-сайтов, тестирования API. Если вы искали опытного тестировщика, то вы его нашли. Я настолько люблю свою работу, что когда прихожу в тренажерный зал заказываю сначала 1 протеиновый коктейль, затем 2 протеиновых коктейлей, 0 протеинового коктейля, 999999999 протеиновых коктейлей.</p>
+          <p>Привет👋 Меня зовут Кирилл. Я — QA engineer, с опытом работы в области функционального и нефункционального тестирования ПО. В мои задачи входило тестирование десктопных приложений и веб-сайтов, тестирования API. Если вы искали опытного тестировщика, то вы его нашли. Я настолько люблю свою работу, что когда прихожу в тренажерный зал заказываю сначала 1 протеиновый коктейль, затем 2 протеиновых коктейлей, 0 протеинового коктейля, 999999999 протеиновых коктейлей.</p>
         </div>
 
         <div class="row">
