--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
             </div>
             <p>
-              Мой жизненный путь не сразу начался с тестирования. Началось всё с попытки просто заработать денег и я устроился на свою первую работу в техническую поддержку, где обрабатывал запросы и исправлял неполадки у клиентов. Далее я проработал в Главном управлении Росгвардии по г. Москве, заменяя инженерскую должность, выполняя задачи по информационной безопасности. Это привело меня в Университет Синергия, где я поступил на Информационную безопасность. И именно там я прошел свои первые курсы по тестированию. Так начался мой путь в тестирование.
+              Мой жизненный путь не сразу начался с тестирования. Началось всё с попытки просто заработать денег и я устроился на свою первую работу в техническую поддержку, где обрабатывал запросы и исправлял неполадки у клиентов. Далее я поступил  в Университет "Синергия", где прошел свои первые курсы по тестированию. Так начался мой путь в тестирование.
               
             </p>
           </div>
@@ -251,27 +251,26 @@
 
             <h3 class="resume-title"></h3>
             <div class="resume-item">
-              <h4>ВРИО ПО ДОЛЖНОСТИ ИНЖЕНЕРА</h4>
-              <h5>2021 - 2023</h5>
-              <p><em>Главное управление Росгвардии по г. Москве</em></p>
-              <p>Занимался настройкой и поддержкой защиты данных, контроль несанкционированного доступа,
-определение и оценка возможных угроз, и разработка комплексного подхода по их минимизации</p>
+              <h4>QA Engineer</h4>
+              <h5>2022 - по н/в</h5>
+              <p><em>Московский финансово-промышленный университет "Синергия"</em></p>
+              <p>Я отвечаю за качество со стороны тестирования в личном кабинете университета "Синергия" для студентов и преподавателей.</p>
             </div>
             <div class="resume-item">
-              <h4>ТЕХНИЧЕСКАЯ ПОДДЕРЖКА</h4>
-              <h5>2018 - 2018</h5>
-              <p><em>Интернет-провайдер ООО "Нэт Бай Нэт Холдинг"</em></p>
-              <p>В технической поддержке я один из первых сталкивался с неисправностью клиента, и делал всё, чтоб устранить ее в кратчайший срок</p>
+              <h4>QA Junior</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>Московский финансово-промышленный университет "Синергия"</em></p>
+              <p>Изучение базовых знаний QA и получение практики </p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title"></h3>
             <div class="resume-item">
-              <h4>QA-ENGINEER</h4>
-              <h5>2023 - по н/в</h5>
+              <h4>Ранее работал по другой специальности</h4>
+              <h5>2020-2021</h5>
               <p><em></em></p>
-               <p><em>Университет "Синергия"</em></p>
-              <p>Занимаюсь фунционнальным и нефункционнальным тестированием личного кабинета студента</p>
+               <p><em></em></p>
+              <p></p>
             </div>
             <div class="resume-item">
              
